--- a/custom_components/opnsense/manifest.json
+++ b/custom_components/opnsense/manifest.json
@@ -1,12 +1,12 @@
 {
-  "domain": "opnsense",
-  "name": "OPNsense",
+  "domain": "opnsense-patch",
+  "name": "OPNsense Patch",
   "codeowners": ["@travisghansen", "@Snuffy2"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/travisghansen/hass-opnsense",
+  "documentation": "https://github.com/eopo/hass-opnsense",
   "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/travisghansen/hass-opnsense/issues",
+  "issue_tracker": "https://github.com/eopo/hass-opnsense/issues",
   "requirements": ["python-dateutil", "awesomeversion"],
-  "version":"v0.3.16"
+  "version":"v0.3.17a"
 }
