--- a/custom_components/opnsense/manifest.json
+++ b/custom_components/opnsense/manifest.json
@@ -8,5 +8,5 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/eopo/hass-opnsense/issues",
   "requirements": ["python-dateutil", "awesomeversion"],
-  "version":"v0.3.17a"
+  "version":"v0.3.17"
 }
